--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:IEQO/FDJ,iv:wPv/HabBih8fUEIsD0DC9gFduUOMMVZnT+zj6MGYbSg=,tag:G+Qt+2MyXB9aTOEYIvY2VA==,type:str]
-ansible_user: ENC[AES256_GCM,data:OFBgWkWq,iv:cKdnJ8JYbt0Xc9rmnwJEAQdTw3bM/qULrRmK3Ty+i8c=,tag:V4ehUfSVBnVq9We8bsS/OA==,type:str]
+kind: ENC[AES256_GCM,data:t87jJEXx,iv:ImC+rvednUSkPMtNFdMMuV9mXxLd2k0LLMTx2d0sXnc=,tag:wV2s728U1qOyu+3twoLHug==,type:str]
+ansible_user: ENC[AES256_GCM,data:w5LA/eRl,iv:LIuYC+7+9Jigk6DRQoghbTY9sj/HwLJ1bK8NbzISKGk=,tag:w/EO91Ow+lq0E7iWoPgNZA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5Q1pNdnhLanpQUk1iMHda
-            OTQzNndhUWlrODRYNHlvenB4R3RLNzZuV0g0CmxEbW1nd3dRTTRGWld6MXRQeFBK
-            Y2F3QTZnaERsYkU0WWIxMk5TUE0wMEUKLS0tIGVWQ3Rzc29mdjYyMFV1Y1BoWFlm
-            VURDMzFQNjhpeFBPN3k4OE0wN0pWczgKMHibg+i+t9C+m04tYQ59xqlOWZC8XS9B
-            ovsPQhHbsZBrm0t0LFlVpZ7nd6+r1J3l5bIpiZxSo5boNe46MQzSDw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzcWtFVmJHS0x0MXptbHBM
+            VGNQK0RzRjFkZ2ZjOUljWWdmY0NsN3pPWm1nCkFnTWpyUjVqWjdYbXZqTHNCRnFv
+            MDdhcWc2ZU91cGhZQXRBV3U2SWJGaVkKLS0tIDdoMFkvRzhFcldtTURxaUh2bTBu
+            OFJlNXc5UEVKVHRQdlM4TTFValplaTAKAbJ+e0jqocIa2yP2e5LIoJVOhZDOx/yA
+            2PJJ//X+95IKMvUUSU9a8thY8Ls06U+tgLvVMKVOXUL/h66FAZ+79Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-19T20:43:10Z"
-    mac: ENC[AES256_GCM,data:CmnkSrZDUawUWI4Zo3fApFXyiUO5aDqSQlSdcKW8WM44CssvH+7uFum4wK0uv2B9I7J0BfuhWNbADwGhfEeQgBshTPxfos/z6HtnMAWzCgx4F0MHBeSMdnDbM3vGtFzjydHD1d27g0kwqzo9wciH9N1PDjeZ6/B7LA0AqPnsr1Y=,iv:hhMq26fdAlRn/IBMvx0Fyi9B2mkl2CSgS3SIUABhwYA=,tag:WDUzn75ICVhVFxBVxcFCKQ==,type:str]
+    lastmodified: "2023-02-20T00:03:40Z"
+    mac: ENC[AES256_GCM,data:Rd5Zi5evXo83Kc1YDMAeC0nCCYiJZ2vph4de4byZZ48CdDYZMm1rxLuK5PBtzfQdR4ebliQfzXGUfXc+juBHqL5rVoIsReHrQXhALwQsoXFptgnSaI0Q5j6W3R3XIXhOseuaG8I4UocWIECkjiL+7EP8ATwCQoOqeiGNb3AQjiw=,iv:Co5lNvRRuWUWrW/CEwGqwykj/56ad78QR0/S7pVLbkc=,tag:IUaEDiwcPOR1OBhLyTnbxw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
