--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:MHfmaa6y,iv:pssUsXyZz+uQIKM37/IdS790QKIlaUGZQSyBPeqR+7g=,tag:sW+Fm5wjUlkdWZnSQ2g9sA==,type:str]
-ansible_user: ENC[AES256_GCM,data:o+Oh1PtL,iv:W6dBZUz0MIHXVDrmlMQAEV5tKf0u+O0GXpkynSlrmfI=,tag:dBFgMMZsIGAWGbGNFTtcWg==,type:str]
+kind: ENC[AES256_GCM,data:iNdIlAgL,iv:spCdyHK0IfjUlyHkiZId5kaPURIzWt95n4SFwMhP8R4=,tag:52H4dfOzHoiFtO2nz5aJQQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:3SzLzwW8,iv:CZ41LiJCCpt0TunmuKx4pxCQyJldaMvW1k8nx2DofdI=,tag:G3B0dSxwRQVQasDezrJW4w==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxUExJQUF3a1Y2NU8vWHJw
-            Z3puS2lCNVVWLzhqd0d5QkNuMWJucVA1eGx3CnRuS0QrOS9jdkUyMTlWUEg3cFBD
-            ZEd4U29zaUd3YlBUQTErQWJkME0zNHMKLS0tIFhCRTFrdXJRaS9YZFJWazYyZVJa
-            OHlyYittS0ZQMVA2dit2NTFRUkVrN0kK0dRoK739zKoHjzO5Wpz0FkluLa0XzZB0
-            w6a6vx4/vxvbJkR3sVoUUOHOc1UocV31LMnmrVlC5LokO8Lku6ErmQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuSlZtc0VhVEZQZ05uVTNK
+            bkJhU0ZhUmpkTEdHbldIR09HUWRndnBkYVZFCis5OXdhRVRHRzc4KzJROWMwNm9x
+            TERhMUcrUzRIZVo1TFE3TGlIdmRobzgKLS0tIHFjQ0wwOWU5bnN4cVdOUUsrRmJ1
+            bXo5eDl5Q2x2K3FvM3Y2clFaT2F6TFkKKCd/mnwrX5oA8CrRFRBFJVjHgGK4Xwqw
+            kKdxhBa9P6hkLYRarvV7/N78V9BUR/5k43n60c6+4g2HxFu8jbDJGA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-19T20:43:10Z"
-    mac: ENC[AES256_GCM,data:GuXaHcFWWISHMH3yvVEcEP1slnIqScXOSCgBHbzdhK3bBlRSpDwQZrYQ8B20MxQMQZyBPkm0todP3GlexYdAsBvQfsqfHiLmmpGIV5HOGwHL8ANpuB0ND7xYU2meMEJo6RBQqkz36QNZLp/jF1YTqAQAPXFEHIFLXWIiXzSxX3o=,iv:CNlNaS5iFwQo6vVD9+VVbwODPmsRSe8jddPDJNJ2Sik=,tag:HhGfNfysPEXaIdCd64pgOA==,type:str]
+    lastmodified: "2023-02-20T00:03:40Z"
+    mac: ENC[AES256_GCM,data:DcTaZLRyKZsInnyDT/ihdIAyB0gloqxkTs9p6BXSLvlNk160HvKd80MwrYpkSJz5fUw8vdW83RdZjX1uWFwh2S3EpbhnUfg/X4g8U3ONuG+01XHJM+v9fe09kFapkqZffRUCFJgwYWVb1h8BZjXWnqv65yQDUBhXlGRmfp2AOJk=,iv:8dDhADM+vORL5dScbXtH2SZeFQGNQ/aF9xin28fuAYg=,tag:Oi5L4BaqfDizcet3a4YgYA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
