--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Rd0AcA0K,iv:fDJ7QT+w+ijV8nXNBnPPipbu3oEt34G6dDx/RDF63Q8=,tag:JW6g5NrdqmW+rzb8PUeVGA==,type:str]
-ansible_user: ENC[AES256_GCM,data:3PjQbMsZ,iv:JZXcPI2HyMF0r90mpVR1FWhj3wab9en3LTRwbO6/Wi0=,tag:pXo6XEaawjyqoVdSIxuEuA==,type:str]
+kind: ENC[AES256_GCM,data:lLsnepJ1,iv:Kquwy62iG4ynaRVgNyxwIwP06yUTMsfLh7dEXHuxHTI=,tag:Y2XJaJACvtnzTMzukmchpA==,type:str]
+ansible_user: ENC[AES256_GCM,data:8ELPFSc8,iv:IKohvABCqh+CfiF2lAKPUwigED2HRZ7G9dSQ8RprkfE=,tag:xwb9WgEdhfSGuzXpoIxaLQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsRlFqSzFYbXBsL3Uwc3o3
-            cFc4MTZidVJZUWxlWTU0OHpIM2szN2V4dENFCmExc0NHYVkzbEFpY3ZTWnlsejVa
-            bFE1RXlMRG1hY1hkazgzV285M1htRFUKLS0tIDQ3WGUrMGFLbHA1Y2p4OGFTM2pz
-            Nk9EV1BBcHBQVlNvMlR2Mmo5ZUpnbXcK27JH1EEm//YL/rM7WLL8EKLTUdyTsFm7
-            Qi8LMqKqmDbJ1RKtyvAevHQgFUD6CfDK+PXpZXfAAyOMWbgtmzBYkw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5R2Q2UzZwR29xNXQ0YzVL
+            MjZUVDRtbUVWZnJnUDNYaStsQk5BMUhnVHdjClc3b0FHNFhWdWIrYTB2RGs3SFZ2
+            czRINWJmK0VNNlhXMFN4Ynova3lxck0KLS0tIDFwa0NpSURYeGtwcVdhTmN1WTNI
+            cG5LU2tQUmxLZ2lqelkyUEdLVzF3UGcKoWEL3oqxQdF7exX3S4o+TgFbntD2xGtD
+            Y53jgiOxqvKpN04s6vwLnftsDW/CALmrNu/YimfS9haDzddzeaWRhQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-19T20:43:10Z"
-    mac: ENC[AES256_GCM,data:47yAOQ8ypndgYQucWmD/0gTURh4l2A3Ng1gafKTE9u1oGJecD520CPhBGYnwyXiO6gjhyME8eA6WimKdAibkoC7HIHyOUDAb6kt/2syNUMsFudzBN68MoLnXcsl8OPZoXPyaIzFmxUBVEpFgufDZs4MWxflznO3Yb27ImN8VMhU=,iv:qaFSGHwhf6quto/wQ8jOBCjPb8Ih1TUidJWaPQAURuY=,tag:Pky9u4QQ1gkGNkLMAvLqKA==,type:str]
+    lastmodified: "2023-02-20T00:03:40Z"
+    mac: ENC[AES256_GCM,data:7b1eeRdozdTCS0+wSKPDjxzK4ddAeS4R4bVwTaW9dGfWZ8thcctMntgGKb+8cfK27Qs034OUjqIjmFyHaePl+v2bmfdMybnlA9so2wp3zUcmBYzQYVsmgsUmi2xJ0fsxIHbvAh2/PMZoUCjc/HqH8lsQQi4lN2iDZoaSMFlm7T0=,iv:5GRwbTT4rYuu6LVGKUDRqkou0EPo+jW84bltE4ZG290=,tag:Z6Vn4WuSCAFjuLzAfkcwCQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
