--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:5JkPt7Gx,iv:5SyktiRNTxKfgK7aXOSGdmH122ZCV4qauwSGPEIWHAw=,tag:sRsxyR2qQZORbbZaTHaFog==,type:str]
-ansible_user: ENC[AES256_GCM,data:AS065Tl+,iv:YAfkyadvHIX2Ya/m2WWt3AglzohZiJbQ7vMMyZ+9HkI=,tag:L49AtGYmfEJVqEX65S4LfA==,type:str]
+kind: ENC[AES256_GCM,data:A7AwHuWb,iv:5YMzQ2LesoT7uTlHjCFhcgIf6/dkVu7MGKPLyETYJiY=,tag:WcBr4aAKDVuCOG6t8JSiXg==,type:str]
+ansible_user: ENC[AES256_GCM,data:fnTVPHP+,iv:60ZDf5o9oq6Mc7j3wU2qLG775FXUOZD8oQc73PM5jlo=,tag:8Nb9tM1mvWyhuKaVhMcycA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0Vlk0WkVkOWFQWW9HSDFu
-            azY2Z0djV3Fmd0JtYzhMY3oveDl4WngrV0V3ClQ3OE1scElQYUk5alBycEVGa1hw
-            WVdhb1A4c0Nzb2U3bWE4TWVHb1E3SVUKLS0tIG95eXBrNzFCdlNUMkFxNFdtclRu
-            WDMyN1BnL1AydHNaTk9McUFMSEg5bXMKcx9y4mnTheD+sjIn2OCloRpQd6lapFWa
-            famKdc+BxySIOfmT8mKK2AkunGCiPdtUtopvo6NbvrPC2VNipprN2g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpVDNDbE5lRmdOYlBuM0ZP
+            ZTJScUp5TGVyRFU5ZVR5Y0dDUGJ1QXgzNFhRCkR6amk0VE1xcHc1VXBXcU95a2tF
+            OWw4dmljTXZUTWpTbm84NlJKOXBWWEkKLS0tIEJzOFJ1b1l2bW8zQ2RtcG9KLzd0
+            dzNwUnl4Z3ZHOWRjS3Bkemp0QU9IRjQKNnihzQMFof7acejX8a306zH8b+55ahuP
+            u8C+WBDpNVP9aAaDV67RFO+zNgaam9cwMhR/ijTR023N+DgErdaQkw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-19T20:43:10Z"
-    mac: ENC[AES256_GCM,data:21Gj0JNORuEg1gpNBrI+TvT2GHyEpOUp3KvkfloF6yoa+QYDZrKALDtrUl09gI7Rqh509vdlUDsV3CJf3s3Asrt5nqcRvKuwSztg0yTQMpjJYbymdZ045diKeNH8SWzXjcv5aKUZtK+8q9vBxCDgANhxbaYYeYoMeV0Dwad/L8w=,iv:arNkLR1Qi5oaHornNz8giDFDdEAPIi9Dqtpy0UbkZzE=,tag:L1UVa9P+9SvDNf8CnF+87A==,type:str]
+    lastmodified: "2023-02-20T00:03:40Z"
+    mac: ENC[AES256_GCM,data:xSKm0s10nRjpBfyLu/sXpnw/WnvL+QigLHmRA0UcrHTpqdG6egNkdsWzg0S3p8BJBcAjLO4pciAxjXK3ChrCMuw/fhbKqxM70E4GmL/cxIFl8qJhVg3VZMer9pHqAvLj3to2fcUJR9E+tCVVvepv9jhyB1iIUnNfb1QjSb/o+hI=,iv:6k0HhH7R9DeDYwBJKdAIrxUXIywyommpNEYHBdzrHQQ=,tag:/6MMXYmMKhEOlKfMc/bYvw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
