--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:84khQe/M,iv:T6DsEbP7RerYGwUEq9xEbKoKfDAbHjAFSRxTFycNyl0=,tag:9JosYuMpPhR07bTL5Tjaew==,type:str]
-ansible_user: ENC[AES256_GCM,data:5FIKsAGm,iv:LWOyLQLpgFnVYolAoT1v/P8Ew4JyRemrFs8HL72Perc=,tag:SVrCjFeE9u6vZejIx6v62A==,type:str]
+kind: ENC[AES256_GCM,data:0MNETZbQ,iv:Br5UjFwS0W+dGgcAehzl5fVT4PPtpQyRpkNiVCXjoQ4=,tag:+JUunpEZQFP3RLUUTExPTg==,type:str]
+ansible_user: ENC[AES256_GCM,data:f9mdSmMY,iv:HnvAe8lm5MSIzqMhzm5rwVuTuvww1ia2rRTJURag+q0=,tag:JBYRHAdqcNr3UjOwcxnlmg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvaGxQREVrYi92Zyt3V0Z2
-            NmNrOHprUk9WY3gxTWt1WU56VjVVZlNldDA0CkF6dUYzWHZhVU42RGJQem45U1Fk
-            bXZKNHdZTC9DemJnYUl2UWxMMmZpUzQKLS0tIFdNTmJHK0RsVjB1WlpyL2RzWGdJ
-            YVpGSlZlSEFQVERTQTVtbmYyL29aaFkKcj1ZUjc7acD2NfXvxjqFKovbOPpmS+NF
-            Gf+wGggd22x27c242hJf9cgpByR/iyB1J1lkRgOFaJfuEn1WndtPXg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhVzBOMHpjV0JpbTg2ejVu
+            UU5EUHYxQ3l2bURpYXNLVDZLalpsZG42K1JRCnJSVHdqUVRScUVldzZxelFHUGV0
+            MlREZ3JkNTlMVUh3WitSbnRyNFR5QVkKLS0tIHlobklTekJtMGFsclhqNkI0Y0Ns
+            Uk9aOWtzdU9QOVpPeUMxaUdrV0F6NU0K6HrNzi2MzGlCJz85+YCKnYCVl/FHBeIl
+            G8zfVuhz/HSMWanypgsta4zYrY9AihLhghEN/VF0I4eUzoRPzLgxfg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-19T20:43:10Z"
-    mac: ENC[AES256_GCM,data:B3YIS3c1jlQJlN+hJxUAFmw4P22zJqh59gaaVJb3jPVq0E/NsGatn6eBawaxlBC3zYuVRZ+oVMieEcH2zzjyfyLMZG/XD0tjlx3zfv2w+LPdd7qNYshC9/Tqlvdq+qPaiQ+Ku7NYuH5znupkkmOxCZjBlupKLNA9FzjynCmLYyk=,iv:lEtE2hl2EwTFlA9hkeNMogrbMH8iXB0El1HJRXoDkKo=,tag:tdgSBZDdUuPo3ptp9X/a9w==,type:str]
+    lastmodified: "2023-02-20T00:03:40Z"
+    mac: ENC[AES256_GCM,data:8HboxtdwuYpGLN+fW5o44nwWI0C8ZgUwqqVhmak5zneAlP4LEBAoWdag4gcmsoIv0HQM3Lo9gz+/lCUjp7cBVYLOnwogJGCaI+mvYNuH6CkYeY0YEuEXcMr3kvp3F75xlI28g4WloBUfx2nSOuyhYR6EZbEzvNMvOdhzAqoxtFw=,iv:w4E2E44uA+Ix5ZF03qDUD7mXFCPYZhRVaFPXMiv424g=,tag:PQwyUyv23XadqTOgJDthfg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
