--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Y7sfVxYMJ4f1FvntSPFnC7+W6p/3,iv:9t57fUY79FgGAE99lewp7IPedYWrvlfrP2btICVRgS8=,tag:36Gpc4BGxz2aE/QIlFQJdw==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:nF3GNLvJGxnwv0+SegDGKvDZ69o8nlXFvGTZBRwMyd+r3X9X3g==,iv:kSfqPkUe6bNuY1SHmcTxO8QLSGgq2UyRAURdwtaM7Y4=,tag:kPRRhuMMfKoLUpLwA6YaXg==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:WMjyzjC8hkbH9zY=,iv:zYVDRU2Qundkf9nwEbwVde7I5oQ8zJ5Rw4eWFmpr8SE=,tag:I+cArHG6KuQntqPOqXJ+rA==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:DFNe0JzuYEAuR33o27gOHtZ/v3et,iv:MxYaNXUcBplzCHjydBQmlu2UVlYn495VQdtliEIUj0U=,tag:WiyHcOc7efuZsn+3SXVrnA==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:9x29I/5XktxDj2p6W6W70HTKwmj77rvAyTcRAv0cFRPiLBfltw==,iv:3/bLTTFpuD0pAlRE/UvXW75LSaHbP/jeO88wIsBTCdU=,tag:i67sAVDqb57KVVqIrWbCPg==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:k8P7aWjwkJ64dHE=,iv:EMtIOUFl3PXxignvIJGKJTR66IW9XEKGcjBg+H1D6Ac=,tag:sD4S6E+iy5fKMAs5EJQ/rw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOL1VneHlQVHZJak1FZS81
-            RDQ5RGthejg5b2dqRUNxS3dONmhSWExadGowClhKQ2xhRjM2azF4djE2UE1ydkhw
-            a3U0MGRwUUZPUzg4aXN3cGl5QXNkbWMKLS0tICtjMEdrM3pEaWFpakVXbWd6N0Fl
-            cS9YOG5vSm1XYXVyb0pTSDVnQW5OeHMKWz/cIomHazFndmyzHkj0R7ATVgOo6zWq
-            jNeJvzgF5rfy3ExrxVLaCGo9Rkm1RDdRmgPOGDnxYN/sChAd3EofuA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHVFV6S3NPTVFVVzZUT3pM
+            T1UxMVdmR0c5VUdXb0k4S2xZUkJxdVdFdlMwCjR3WTBweklBUVRlcjU4VkdCdW4r
+            L3pMZ3hUMHNnSGhITWQvQXlsYitHdnMKLS0tIGp5eWtaekJneWl5cDRqUXJlOUlT
+            OEVQbHZxNTBvQ3VwVmJQY0pVNzZaMnMKdrIZdZoewNcEoxXhSS0l0IAZtoQAnN5F
+            JjsTn+GA9mWNS+yMCq/l4FHfxmECBB/dpwx+VvAWJh3EYZdf/WD+Ag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-19T20:43:10Z"
-    mac: ENC[AES256_GCM,data:yMxNPXcp8t6Zz4GIRLqN1FyG0gtZSU9Vo6dnJuracUU+EiAzMzTj4ldAjET6C5jC983J1gAhQQ0raLIJ7qU2XAqt0qFE1eaJQ8PWv4b72sVWlXCk/Tq3mosgfJnXt4891ld7VEf9mzoGYFuLIWtctirotuK9LpUT8l1t+0U76IE=,iv:M84iu7VKHv7mjN4n7/jTJaC0jdfEtJDo4f+SdQRxy9o=,tag:bSC7m1OdOvpo4qc1+LoLJg==,type:str]
+    lastmodified: "2023-02-20T00:03:39Z"
+    mac: ENC[AES256_GCM,data:3M9BjObas75xWdnmzwZkWQmfy833B10VUAIo8YvZLt1DJhAiw3k8vwvyRRraBPpx0td/dxrs7JAFZFyO5LbK0IzslW1bgE6N86U9fC/YwkqsyYWHzk1b3ONMSEMkEhoJsU/zqEbD9rx/epVVcWadMhSOdyIi4i6ZMv2Pvdc0J5k=,iv:Gkuzxe2AxJcm005hT2tvB1RAGNpA4HgLFXT9ZVIwJuc=,tag:K/kKJ7gGNGjbHI+ufZlZsw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
