--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,27 +4,27 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:T4eGRD0zx8+8CYk=,iv:aOxYEBQ0ntH1dE2aN8uzybx7crtEwftzkWWcuYyMedc=,tag:LzU2XSAvKXL7KG9COOjjTw==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:zPUyjK3wP5oudidsxmyDtIHUHxD3,iv:IQBSDjNXWKfNOtQXMsSuWksqCn7220nz8op8RyP3TZM=,tag:A/6f4yfII+mfjkY1xfEZAQ==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:GxJVN5tHNBeOnCq8c1hPXkzRR4B2E6N8KPkrETcEdfGacL+5RPRP90jjs34lQGckrztWOzwFJAQmx0mdIqZ41b2Cwn1xBo4=,iv:NYK6Q2Kel+8ZMIF27ZsJNtnsqijyXFrM1Ec6l7nDyB0=,tag:GDXn0KLUbQVfTjbg7f4Hzg==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:CvDHvMsdmzNOtvPnQRK6P1RmDPqHNENOEMizzQ5hpnQGMwg=,iv:NwFlX1rpoDJZQba54PvJPuMIqw7BNS1FIg3aA1Bu5+U=,tag:SQ7s9P7NYudnrI0/UxGkyw==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:AtF4MMszIiqo4wl7Azt8RLSXSg==,iv:4J9xw7BrPuw/85szOC8c0v1lAaEZlb62hRfl4Da2Nqk=,tag:BgqLGhpOrN1iXiMD0GbNnA==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:uHZV3pjFeZpK4WyWc57V75M3FeYC,iv:q6McVvDnTpEnwjmBcFC69LjRO0ckgU5IIbeRw9DA4EU=,tag:5ZOJ+PS9UTKmh1sLqCpbiQ==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:CFnR3Fdadxw=,iv:XGd0TXr0a86/cDZr+08LF+YrjoqcoZxOU25kdS2q7Vo=,tag:JP0R8fkdzCHgYFBDuJjT7A==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:YQ/T3/t/5QI=,iv:35KSGlUHZQafrqxkMV4mlu2j2LDfQX9IQFyxWaSi+wE=,tag:mLkYoGO4Ddvt4NGRHUn2ig==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:7nf88jWRG3nvyXGa1sn6iOSFrdnxruJgS2Jh6fV35ouX4Ll/GYHvTHvHA2NwP0k32gqh5OhJ+OjeABes1C+sGA==,iv:iS3qziBSQwv8jy3yQy+L0anC8nwhF7IDcpMlrgFVUzQ=,tag:oUI7sv65ysXHHi8vOjpf7Q==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:I4KqpxzKO1ccpJ93Ze6V4h2/comd/0gZ6y9Hw5K0ictuhCxhmH18Bmz/ZQxNlU9IyNPXPz7uMuSoeM+LGLaSBg==,iv:4cziUjQ0jf9tZYP8oIrHnvVjAMeSt0li1teD9SRDnVo=,tag:IkmMd8Afd17TqmPR9+pusg==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:gj/qJskPiFUt,iv:43zZoJCUcqtOxl6C8qPhgS/z5b3dZkTbNAw9tqGNez4=,tag:yCaj0GoHTKX5LFzixwCFXQ==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:grO4qZ+eT9Gu8KKGVi/1,iv:gqDLF70K3OtHIagVZPE6XGp1HFJO7JLRAeH0N2ys99c=,tag:RtQgIXrosQGtnOQeoN2ONA==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:ZJmqRFR1+r/TaHjancHBiNmSiYZod+FBAa4wGLXedNlQFxd0B8eRYkgYCSjh4WdXaBY=,iv:FwGuB8uP+p4Yy7Nzm+GaVu2LiOhkQkdmMBttJtQJSVw=,tag:LL+QXWyDtso4fEy4zC2l7Q==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:gVgnZtYAipgELf+hmi4=,iv:5SJ/MHmr3OFP+/8EbDvEsr43DxkExjNjTg87O/O3uWo=,tag:iFJa1R/BAHpEkitEbZe7oA==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:pNVrHROFn88K2FvC68o7LpTLfbA=,iv:NcCMNIIHUvlz8ZkMxrEfOwrsSuIMiNsjcqJYUWi5Bd4=,tag:Z9BjlEgQ9IW+k8XGlFuz8g==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:LplX5/fLprg=,iv:8cAbtP6+Y/gczd9Du73rPpk4RZ5qSvRPYXcVf5QkM/M=,tag:6Z9UCSbtoyNH5zDIf+F4UA==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:Vk+Vj7nIeoMiJ8vCBN6oe3pZmcnQI34UWnA2+F84O74TkPYtDw==,iv:NKuP89S2mEfp2od8qqLEwW940a1IS2g8mbFpykoQhTY=,tag:nQsMrBJaEEGQ0OA6RvoKfg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:HDD79M1yBiyr,iv:cTAz1hHHOiSJXKw0G8DMrGh7SlBNHVP7nCPkep72lvQ=,tag:UqzCK7/4ICLQDmxhO/R8HQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:BCJSKfour6iA,iv:OREgFUIsL6a3ac9keKAMbSWyuvHQ9e/yHsZgJvzv4NA=,tag:y58F6KlAhv15vLaMUMuNmw==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:S4MiYuuhcw==,iv:2Bzd56GCFIVPJcu6R8dATCgBDt0aciSVIq2eM6VKYDg=,tag:kWfk230cM9N4Zc+kBdQ+2A==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:0T3AsaJafUJs,iv:1gSzixNCy21fFstWCWjqgMFVjXX7iTxSVQNKEmgN8k0=,tag:9FNMWD9Wx1zIcEhE9wRVRQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:/UZC8rM8xl2YGaU=,iv:g09i+hRE2gQ3Uupb+pKuOzoK1H2SdWEACth5Tqe/soI=,tag:JTMrQ29WHFQPgGqZc4AZvw==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:lEVibCTEB/hYs8+O0OpyLKipFsQj,iv:lXze7gUBMrOO0dbsGU+i9Q3kEi6L52uuIJ7ho/PTIFs=,tag:+5hC16L0gxbA53nnvJYyRw==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:yQeq7Y/vUKIMviZr4CuIIYE5cDES0cPpXzJkbZHW6uE4vxb5Es62qE1YmaSM0Od4L9AJELSYNrkr2FG+GCZ/PQtiw/RZHnM=,iv:CJObGxqCGLm1uPfXuM8LqWOjampbVWiOQjD3qPP/tzg=,tag:V2t4023M3Gu+eGuh000Njg==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:L74OHkJRjeA5aQmfTyTGRFqW6gE8T7layRiGyg2r86/A7Tk=,iv:nzVEJpe+WOVkoe3HD8+V4ZVlB/75l3D21+A/dkuR2pw=,tag:RHzjSTw4YGg1mf/ngHp2JA==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:gQN1wjqHnf4vRmiRZQqTbdO2Zg==,iv:LDwPOJ8wK0rdBRMd5IS8EzfjTcEz4PK/8rlpBHP16DA=,tag:WIRggUg15PaMxUBr0Gj3DQ==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:7aQixMFtjDSIEuDE4lsfiu4v9KPQ,iv:ltnpspizK4ZmQaXd1BMVsG0iOdI0A3iy7h+tzW0anko=,tag:vLh7G7PZCX3mDVGuSoK+UA==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:PtMQ2848QSw=,iv:4rE9f/olQyhQU60xEYbI/1Y7VB/7tLCy0Jlai3ptgkA=,tag:fGrogTE0IIYnPnnUeZ3UTQ==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:G7cspBLS8C4=,iv:jlk44HasNz5a3v0yhebHhIUHZMdppjadiHJMZ0Xe3Cg=,tag:8rpmj5eU4SrFzkR0/AaH+g==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:bg2+8uRN/tKT2T/lthItQ89ffzY3vddqYgjzk/Pofd4Qmvq4OKiLFuC5XQxkBQw+6YpjmR+g7nKY1dy5hpHfAA==,iv:hZ1OOBhZwCuQHDASH4KMpoGSsvThD6dKHmxzD20WQtw=,tag:6kxOmBxLmkliELaNGfNaZA==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:Wi00monUZbgpOfcJBduvI3Ej3cX+/3A9FuM2oKuYXU/ZR8DDQd+caIuWWojGX9N0oQs2/hCZI3Cty26f9CRZiw==,iv:MB7Hi5W1LW+c9whds1QL/RZHGmLvUrY0om5PG+nG4+8=,tag:fpE0oqJCq5H1Dn8XkY2YXw==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:jZMeChL+soQn,iv:aZL++Ae3iRPBqpNbAr7QUtFjJRSkM0nXObVu2CZk/PI=,tag:wU0TU6M1oJSlwTK1gDxYew==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:/IHtK4iA3g3qIyTH4pu2,iv:Qr7lpiMQVbJGoIPzDGz+wuMv+bjWpp/EZqISYhIOB70=,tag:4JQ93o1eTWzI6GPTuqK98A==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:mUfPth2OcLIbStNUthDM9K0qH8WSW3gPKb58eZ8MP4m7NVQUd7lLaToZ0agz2Tw72Kw=,iv:ekog5TQ9ZFXHC5mPWVCpc2Pz/Cn0SP17y3Fzs+1cByc=,tag:zg5DQvpfkHdGYg/tSX/Fhg==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:RcE2y4LhNLyTDi4J92c=,iv:8ObAdfGjqoa40Xljz+dycQnX1QL91Ue4FURli8cBgQc=,tag:tlBjhylr649nL8mj8M9VNQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:ebWdq9PDDaz1qc30410pVp5IcrU=,iv:PM5wPc9OObxZfCmm9dekG1HPYFLCyZlFRZR4c0szv7w=,tag:vAGhoW+4NFEq67RXnBQGEg==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:+YFpg5C9LuY=,iv:XgktVinw5cFxqKHGO1ST6NAZeQm8SwDPWaVNGGyr5yM=,tag:lNFqc7cbwhasMag2kfSiGQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:sh/nfsy8WgvVaoMqQ3XNGY5YDyQfWGxLWLjzsSFIeEDld0eGfA==,iv:+p6Pi9Fm8SpWLxsxm+Vytq9FNUPuVNtsC8XRCHvPwak=,tag:dkC0frsekxFpMsLp3Mw6qw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:bGwXW4ByPKnv,iv:7zsrWms2vH1aZly031vKCiM6WdivUdBGIE6WaNUXIC4=,tag:9CZknkBxBIGYKkJ7nG9rDA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:MW0JI013sF1Y,iv:hdEEViIxEzuLV7LkBDDPrjMz/026bm6jn5quasukH98=,tag:O4vSTRq/QON1tXDNZ1dw6Q==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:JUD/420JCA==,iv:B3Uz7JfgyqJz9bK7H0WBMEmOjJ3zg3CF0fadthgvJ4Y=,tag:JQeX0mLihaRYMpqv6juzHw==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:DXPjvqg0Uyx+,iv:GxjEpriHGMSD2oyUFDxcMhHkliu0nM91+BpB8+jducc=,tag:VrqoCnikYTtmyXVUlzHo6w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,14 +34,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGbGRQa2lyNlVoR01rbHJZ
-            dTNWcVFOS2FLTm1Ud1l6QVdaL2dpejQ5ZzNjClN0cGh4QzZjL05wSG9LcWNkWDVl
-            NEI2bmI1N2h6NzJtN215THQvUkNkV1UKLS0tIFcyTHl2ZnowcDVnSWJESHpvbGN1
-            MUI0bTlIOEVnZmVCTjFTam5oWk9GL0kK6NibCpr1RmGp/uIZ94RXoJLBG79mQ+up
-            ORysYt7ghpM3koTWzzw1AZ88KcKSKUWWtGysUljpewGLg/4n+KXD6A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1cEZiUG5TVUh4SVhFNHFF
+            c09UY2kyd1BFUDFvY2ZTRHFRTGRoMG11TlJBCmdCanVvNzE2NVpsMGFYNGxOS3hl
+            eFp4ZDFldE40R2ZQQ2hFMVVMS0VWSk0KLS0tIGxOR3EzZHNQNzYxTHdzM1p4K3Z6
+            aXg0RGJEbDJKQTBnZTU2cWs1MWVCTUEKhVecWGYcF92PyDR0JDv9NC9S1HsEmDfU
+            6b38HktRxU8/YuR4JcW1/RP0ShQ3lqLHaUI0I4YhUXgtkShzlZSNDA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-19T20:43:10Z"
-    mac: ENC[AES256_GCM,data:DdWAYdYsZfxmOWmomjfElaEmaWJXL554t51HP6qokCK7BztShDSjX7g/WUUI0Ovrfetpd6/OsUIdjpW08VfUJwl43Xgh5H0LiZ/Z0AZ/WI3mQdVhIHzZ0g6/NeJ6LAubUDUYLX+rX+3QQD3srnlyvaja663ak6YfyblpUNarLL4=,iv:30gWj7sqytxHl5myp0XBvFW96DHmzGs2LFBc2EE72ps=,tag:he+s9r7t35qA4oZh1N9ydg==,type:str]
+    lastmodified: "2023-02-20T00:03:39Z"
+    mac: ENC[AES256_GCM,data:FTMlOMe3I4+UK+xxE1BYjML5OVMVH0F7H6BEz/Ru8HDpNrvSXyJ/me8R5//D2nMnomyJs6MQGlW3wdCkaq3pq2kVUxofaXS/6Vq08mhxTZ/xoWcuLL4CEdh3keqMRyOLWeZXuOUPMnnh1SJRkD/SxE2HcXb6bCxbO/JkuyBq/qc=,iv:9zcLk3pf2jqQ1f0wRaqWcfV4QUcBf7ZdsD7MNSUiCqY=,tag:97r3VexEuZJp4YILcztzOA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
